-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9
-
Fix Version/s: 0.9.1
-
Component/s: Compiler (General)
-
Labels:
-
Patch Info:Patch Available
Two reasons:
1) we have another generator that we want to use a different namespace for, and the generator is not part of thrift proper
2) back compat: so two projects that depend on two different versions of thrift are more likely to be able to share a .thrift file, even if the project using the newer thrift libraries uses a new generator that wasn't in the old thrift libraries