THRIFT-1907 Compiling namespace and sub-namespace directives for unrecognized generators should only be a warning Patch: Andrew Cox