compiler/cpp/src/parse/t_program.h
@@ -188,7 +188,8 @@ class t_program : public t_doc {
         if (sub_index != std::string::npos) {
           std::string sub_namespace = language.substr(sub_index+1);
           if ( ! it->second->is_valid_namespace(sub_namespace)) {
-            throw base_language + " generator does not accept '" + sub_namespace + "' as sub-namespace!";
+            std::string warning = base_language + " generator does not accept '" + sub_namespace + "' as sub-namespace!";
+            pwarning(1, warning.c_str());
           }
         }
       }
